--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,45 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+  background: black;
+}
+
+.bigButton {
+  padding: 40px;
+  color: black;
+  font-weight: bold;
+  background: red;
+  border: 1px solid black;
+  cursor: pointer;
+  font-size: 35px;
+  height: 100%;
+  width: calc(100%);
+}
+
+.bigButtonPlayer {
+  padding: 40px;
+  color: black;
+  font-weight: bold;
+  background: blue;
+  border: 1px solid black;
+  cursor: pointer;
+  font-size: 35px;
+  height: 100%;
+  width: calc(100%);
+}
+
+#tempo {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 30px;
+  font-weight: bold;
 }
